--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ oz/oz
 goat/Stage1/testCase/GeneratedOutput/*.txt
 goat/Stage3/oz
 goat/Stage3/testCase/GeneratedOutput/*.oz
+goat/Stage3/asgWithNumericOperatorOnly.symtable
