--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,6 @@ oz/oz
 oz/oz
 goat/Stage1/testCase/GeneratedOutput/*.txt
 goat/Stage3/oz
+goat/Stage3/Goat
 goat/Stage3/testCase/GeneratedOutput/*.oz
 goat/Stage3/asgWithNumericOperatorOnly.symtable
